Refactor mBox to javaFX add javaFX

--- a/pom.xml
+++ b/pom.xml
@@ -35,12 +35,12 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>1.13</version>
+            <version>17.0.6</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>1.13</version>
+            <version>17.0.6</version>
         </dependency>
     </dependencies>
 
@@ -103,6 +103,10 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
