--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>uk.co.electronstudio.jaylib</groupId>
             <artifactId>jaylib</artifactId>
-            <version>[5.0.0,5.1)</version>
+            <version>5.0.0-0</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
